fix collectors